--- a/.github/workflows/test_python_environment_linux.yml
+++ b/.github/workflows/test_python_environment_linux.yml
@@ -1,4 +1,4 @@
-name: Test GDS Environment (Python)
+name: Test GDS Environment (Python) - Linux
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
 
     steps:
       - uses: actions/checkout@v2
