Hardcode platform on explicit file name

--- a/.github/workflows/test_python_environment_macos.yml
+++ b/.github/workflows/test_python_environment_macos.yml
@@ -49,7 +49,7 @@ jobs:
         continue-on-error: false
         run: |
           conda activate gds
-          conda list --explicit > gds_py/gds_py_explicit_${{ matrix.os }}.txt
+          conda list --explicit > gds_py/gds_py_explicit_macos-latest.txt
 
       - name: Commit file
         run: |
