Printing expicit on GA builds

--- a/.github/workflows/test_python_environment_macos.yml
+++ b/.github/workflows/test_python_environment_macos.yml
@@ -49,6 +49,7 @@ jobs:
         continue-on-error: false
         run: |
           conda activate gds
+          conda list --explicit
           conda list --explicit > gds_py/gds_py_explicit_macos-latest.txt
 
       - name: Commit file
