--- a/gds_code/Dockerfile
+++ b/gds_code/Dockerfile
@@ -7,7 +7,7 @@ RUN curl -fsSL https://code-server.dev/install.sh | sh
 RUN apt-get update \
  && apt-get install -y latexmk
 
- RUN /usr/bin/code-server \
+RUN /usr/bin/code-server \
      --install-extension quarto.quarto \
      --install-extension vscodevim.vim \
      --install-extension ms-toolsai.jupyter \
@@ -16,6 +16,8 @@ RUN apt-get update \
      --install-extension james-yu.latex-workshop \
      --install-extension equinusocio.vsc-material-theme \
       && fix-permissions /home/$NB_USER/.local/share/code-server/
+
+ENV QUARTO_PYTHON="/opt/conda/envs/gds/bin/python"
 
 USER $NB_UID
 EXPOSE 8080
